[gd_scene load_steps=8 format=2]

[ext_resource path="res://Public/bonecoTeste.png" type="Texture" id=1]
[ext_resource path="res://Personagens/Dummy/Dummy.gd" type="Script" id=2]
[ext_resource path="res://Public/Utilitarios/balaoDialogo.png" type="Texture" id=3]
[ext_resource path="res://Public/KeyboardKeys/teclaE.png" type="Texture" id=4]
[ext_resource path="res://Public/Utilitarios/balaoMissao.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=2]
radius = 55.9391
height = 150.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 107.7, 183 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Enemies"]]
position = Vector2( 95, 126 )
rotation = 0.00121782
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -26, 6 )
shape = SubResource( 2 )

[node name="BonecoTeste" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -6.33527, -3.07074 )
shape = SubResource( 1 )

[node name="HP" type="Label" parent="."]
margin_left = -103.476
margin_top = -328.569
margin_right = 44.5235
margin_bottom = -276.569
rect_scale = Vector2( 4.97427, 9.55335 )

[node name="dialogBubble" type="Sprite" parent="."]
visible = false
position = Vector2( 18, -20 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="missionBubble" type="Sprite" parent="."]
visible = false
position = Vector2( 18, -20 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="actionButton" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
